# code-actions

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  code-actions.toml  fnox.toml  mise.toml
.claude/commands/: extra-derives.md  fixes.md
src/: add_blank_lines.rs  add_dependency.rs  assertions.rs  clean_external_path_deps.rs  constants.rs  errors.rs  experiment.rs  extensions.rs  extract_package_into_repository.rs  extract_package_to_repository.rs  fix_imports.rs  fix_impossible_derives.rs  fix_name.rs  functions.rs  generate_command_struct.rs  generate_enum.rs  generate_error_enum.rs  generate_error_struct.rs  generate_file.rs  generate_fn.rs  generate_freewrite_file_from_anchor.rs  generate_impl_from.rs  generate_module.rs  generate_modules.rs  generate_package_from_anchor_name.rs  generate_struct.rs  generate_trait.rs  generate_type_alias.rs  get_freewrite_path_from_anchor_path.rs  get_newtype_wrapper_struct_token_stream.rs  get_relative_path.rs  get_subtype_struct_token_stream.rs  join_blocks.rs  lib.rs  main.rs  primary_module.rs  remove_impossible_derives.rs  remove_module_by_path.rs  statics.rs  test_helpers.rs  (+3 more)
src/assertions/: assert_file_contains.rs
src/errors/: code_actions_config_compile_regex_patterns_error.rs  code_actions_config_load_from_anchor_error.rs  code_actions_config_validate_error.rs  config_compile_regex_patterns_error.rs  config_load_from_anchor_error.rs  config_matches_empty_error.rs
src/extensions/: camino.rs  std.rs
src/extensions/camino/: utf8_path.rs  utf8_path_buf.rs  utf8_path_ext.rs  utf8_path_old.rs
src/extensions/cargo_toml/: dependency.rs
src/extensions/std/: fs.rs  path.rs  string.rs
src/functions/: code_generation_helpers.rs  filter_map_impossible_derives.rs  format.rs  get_clippy_messages.rs  get_crate_name_crate_spec.rs  get_impl_file_contents.rs  get_latest_crate_version.rs  get_table_from_item.rs  get_the_only_key.rs  init_tracing_subscriber.rs  label.rs  modify_rust_file.rs  parent_candidates.rs  parse_key_value.rs  rename_declarations.rs
src/traits/: cargo_info.rs  dependencies.rs  discard.rs  find_dir_containing_filename.rs  is_internal.rs  is_internal_opt.rs  rename_module.rs  to_module_token_stream.rs
src/types/: anchor.rs  config.rs  crates_io_api_error.rs  dependency.rs  diagnostics_provider.rs  get_table_from_item_error.rs  label.rs  local_package_not_found_error.rs  module_template.rs  module_token_stream.rs  package_info.rs  project_root.rs  syn_path_serde.rs  syn_use_tree_serde.rs  toml_file.rs  type_name.rs
(+27 files in other folders)
