[package]
name = "code-actions"
version = "0.1.0"
edition = "2021"
description = "A collection of code editing tools for Rust"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/code-actions"
repository = "https://github.com/DenisGorbachev/code-actions"
readme = "README.md"
keywords = []
categories = []

[package.metadata.details]
title = "Rust Code Actions"
tagline = ""
summary = ""
announcement = ""

[dependencies]
#tokio = { version = "1.39.2", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }
anyhow = { version = "1.0.95" }
assert_matches = { version = "1.5.0" }
camino = { version = "1.1.9" }
cargo_metadata = { version = "0.19.1" }
cargo_toml = { version = "0.21.0" }
clap = { version = "4.5.11", features = ["derive", "env"] }
crates_io_api = { version = "0.11.0" }
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
derive_builder = { version = "0.20.2" }
derive_more = { version = "2.0.1", features = ["full"] }
duct = { version = "0.13.7" }
fmt-derive = "0.1.2"
fs-err = { version = "3.1.0" }
glob = { version = "0.3.2" }
heck = { version = "0.5.0" }
helpful = { git = "https://github.com/DenisGorbachev/helpful" }
indoc = { version = "2.0.5" }
itertools = { version = "0.14.0" }
lazy_static = { version = "1.5.0" }
not-found-error = { version = "0.2.3" }
pretty_assertions = { version = "1.4.1" }
prettyplease = { version = "0.2.29" }
proc-macro2 = { version = "1.0.93" }
quote = { version = "1.0.38" }
regex = { version = "1.11.1" }
rustc-hash = { version = "2.1.0" }
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
standard-traits = { git = "https://github.com/DenisGorbachev/standard-traits" }
stub-macro = { version = "0.1.3" }
subtype = { git = "https://github.com/DenisGorbachev/subtype" }
syn = { version = "2.0.98", features = ["full", "extra-traits"] }
syn-more = { git = "https://github.com/DenisGorbachev/syn-more" }
tempfile = { version = "3.16.0" }
time = { version = "0.3.37", features = ["default", "formatting", "macros"] }
toml = { version = "0.8.19" }
toml_edit = { version = "0.22.23" }
tracing = { version = "0.1.41" }
tracing-error = { version = "0.2.1" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = { version = "2.5.0" }
xshell = { version = "0.3.0-pre.2" }

[package.metadata.cargo-machete]
ignored = ["stub-macro", "helpful"]
